--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1> Hello World </h1>
+    <h2> two</h2>
+    <h3> three</h3>
+    <h4> four</h4>
+    <h5> five</h5>
+    <h6> six</h6>
+
+
 </body>
 </html>
